testdata/negative/zb_neg_chained_cmp.ksy
meta:
  id: zb_neg_chained_cmp
seq:
  - id: a
    type: u1
  - id: b
    type: u1
  - id: c
    type: u1
instances:
  chained:
    value: a < b == c
